--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "react-simple-typewriter": "^5.0.1",
+    "react-typist": "^2.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
